feat: update attachment swagger and api
